fixed vertical alignment of box letters

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -2,6 +2,7 @@ header {
   height: 75px;
   background-color: lightcoral;
   text-align: center;
+  line-height: 75px;
 }
 
 section.header {
@@ -13,12 +14,14 @@ section#left-box {
   height: 150px;
   background-color: aquamarine;
   outline: 1px solid black;
+  line-height: 150px;
 }
 
 section.big {
   height: 125px;
   background-color: lightskyblue;
   outline: 1px solid black;
+  line-height: 125px;
 }
 
 section.square-left {
@@ -27,6 +30,7 @@ section.square-left {
   background-color: lightcoral;
   display: inline-block;
   outline: 1px solid black;
+  line-height: 250px;
 }
 
 section.square-right {
@@ -35,12 +39,14 @@ section.square-right {
   background-color: lightblue;
   float: right;
   outline: 1px solid black;
+  line-height: 250px;
 }
 
 section.footer {
   background-color: chartreuse;
   height: 80px;
   outline: 1px solid black;
+  line-height: 80px;
 }
 
 @media only screen and (min-width: 960px) {
@@ -49,6 +55,7 @@ section.footer {
     text-align: center;
     background-color: gray;
     height: 100px;
+    line-height: 100px;
   }
 
   section#left-box {
@@ -56,6 +63,7 @@ section.footer {
     height: 600px;
     width: 20%;
     outline: 1px solid black;
+    line-height: 600px;
   }
 
   section#left-box:after {
@@ -83,14 +91,17 @@ section.footer {
     height: 200px;
     display: inline-block;
     outline: 1px solid black;
+    line-height: 200px;
   }
 
   section#left-rect {
     float: left;
+    line-height: 200px;
   }
 
   section#right-rect {
     float: right;
+    line-height: 200px;
   }
 
   section.square-left {
@@ -118,5 +129,6 @@ section.footer {
     height: 150px;
     background-color: chartreuse;
     outline: 1px solid black;
+    line-height: 150px;
   }
 }
